--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,8 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <!-- Define the ResourceConfig class -->
         <init-param>
-            <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.easyshop.HelloWorldApplication</param-value>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.easyshop</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
