--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,12 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <!-- Define the ResourceConfig class -->
         <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.golaso</param-value>
+            <param-value>com.golaso.filters.InitializationFilter;com.fasterxml.jackson.jaxrs.json;com.golaso</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -18,6 +22,10 @@
     <!-- Map all the URLs to the Jersey ServletContainer -->
     <servlet-mapping>
         <servlet-name>JerseyDemo</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/api/v1/*</url-pattern>
     </servlet-mapping>
+
+    <listener>
+        <listener-class>com.golaso.filters.GolasoContextListener</listener-class>
+    </listener>
 </web-app>
